# visiowl

./: .env.example  .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.claude/: CLAUDE.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/bugs/: invalid-pubkey-wrongsize.md
programs/visiowl/: .gitignore  Anchor.toml  Cargo.toml  package.json  tsconfig.json
programs/visiowl/programs/visiowl/: Cargo.toml
programs/visiowl/programs/visiowl/src/: constants.rs  errors.rs  lib.rs
programs/visiowl/tests/: visiowl.ts
public/: actions.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/activity/: loading.tsx  page.tsx
src/app/spaces/: page.tsx
src/components/feed/: ActivityFeed.tsx  FeedRow.tsx  LeaderboardPreview.tsx
src/components/layout/: Nav.tsx  Providers.tsx  WalletModal.tsx
src/components/rep-card/: ActivityBadge.tsx  BadgeCard.tsx  BadgeShowcase.tsx  LevelUpPanel.tsx  PlatformGrid.tsx  RepCard.tsx  RepScore.tsx  ShareBar.tsx  SignalBar.tsx  TierBadge.tsx  WalletStamp.tsx
src/components/spaces/: AccessGate.tsx  FeaturedSpaces.tsx  SpaceEventCard.tsx  ThresholdPicker.tsx
src/lib/: badges.ts  feed-store.ts  mock-data.ts  redis.ts  space-store.ts
src/lib/hooks/: useCreateSpace.ts  useFeed.ts  useRepScore.ts  useSpace.ts  useSpaceEvents.ts  useSpaceMembers.ts  useSpaces.ts
src/stores/: index.ts
src/test/: utils.test.ts
src/types/: index.ts
(+16 files in other folders)
