[package]
name = "visiowl"
version = "0.1.0"
description = "Visiowl — Solana on-chain reputation layer"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "visiowl"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = { version = "1", features = ["rt-multi-thread"] }